[package]
name = "rsgmo"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/torohash/rsgmo"
keywords = ["GMO", "api", "wrapper"]
description = "GMOコインのRust用APIライブラリ."
license = "MIT OR Apache-2.0"
authors = ["torohash <torohash@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures = "0.3.30"
hex = "0.4.3"
reqwest = { version = "0.11.25", features = ["json"] }
ring = "0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["net"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"

[dev-dependencies]
chrono = "0.4.35"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
